--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>BITZER - QR Code Generator</title>
+    <!--Bootstrap CSS-->
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
+    <!--Bootstrap JS-->
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
