--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,43 +3,214 @@
 <head>
     <meta charset="UTF-8">
     <title>BITZER - QR Code Generator</title>
-    <!--Bootstrap CSS-->
-    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
-    <!--Bootstrap JS-->
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: whitesmoke;
-            margin: 0;
-        }
-        #main-wrapper {
-            width: 80%;
-            height: 80%;
-            border: 1px solid green;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/main.css(v=${#dates.createNow().getTime()})}" />
+    <script th:src="@{/js/vue.global.prod.js}"></script>
+    <script th:src="@{/js/commons.js}"></script>
 </head>
 <body>
-<div id="main-wrapper">
 
+<div id="app">
+    <h1>QR CODE GENERATOR</h1>
+    <div id="search-create-container">
+        <input type="text" id="search-input" placeholder="Search">
+        <button id="create-button" onclick="createNewQrCode()">Create New QR Code</button>
+    </div>
+    <div id="qr-container"></div>
+    <div class="pagination">
+        <button id="prevBtn" onclick="prevPage()" disabled>Previous</button>
+        <span id="pageInfo"></span>
+        <button id="nextBtn" onclick="nextPage()">Next</button>
+    </div>
 </div>
 
 <script th:inline="javascript">
     /*<![CDATA[*/
-    let message = null;
-    let app_version = null;
+    let qrCodes;
     try {
-        message = [[${message}]];
-        app_version = [[${appVersion}]];
-
-        console.log(message);
-        console.log(app_version)
+        qrCodes = [[${qrCodes}]];
     } catch (e) {
-        console.log("Model variables not found", e);
+        cLog("Model loading error ", e);
+    }
+    /*]]>*/
+
+    if (qrCodes !== null) {
+        cLog("QR Codes loaded. " + MESSAGE);
+        console.log(qrCodes);
+
+        renderQRCodes();
+
+        //TEST PUBLISHED
+        let element = document.querySelector('[data-qrid="1545"]').querySelector(".switch input");
+        console.log(element.checked);
+
+    } else {
+        document.getElementById('app').innerHTML = `Error: QR Codes could not be loaded.`;
+        cLog("ERROR: QR Codes not loaded.");
     }
 
-    /*]]>*/
+    function renderQRCodes() {
+        const container = document.getElementById("qr-container");
+        container.innerHTML = "";  // Clear previous content
+
+        const startIndex = (currentPage - 1) * itemsPerPage; // variables set in commons.js
+        const endIndex = startIndex + itemsPerPage;
+        const paginatedItems = qrCodes.slice(startIndex, endIndex);
+
+        paginatedItems.forEach(qrCode => {
+            const qrCodeId = qrCode.id;
+            const qrCodeName = qrCode.name;
+            const createDate = qrCode.createDate;
+            const createDateOnly = new Date(createDate).toLocaleDateString("de-DE");
+            const campaignName = qrCode.attributeValues.find(attr => attr.attributeName === "campaign_name")?.value || "Not Found";
+            const campaignMedium = qrCode.attributeValues.find(attr => attr.attributeName === "campaign_medium")?.value || "Not Found";
+            const campaignSubject = qrCode.attributeValues.find(attr => attr.attributeName === "campaign_subject")?.value || "Not Found";
+            const urlCode = qrCode.attributeValues.find(attr => attr.attributeName === "url_code")?.value || "Not Found";
+            const urlEncoded = qrCode.attributeValues.find(attr => attr.attributeName === "url_encoded")?.value || "Not Found";
+            const trackingUrl = qrCode.attributeValues.find(attr => attr.attributeName === "tracking_url")?.value || "Not Found";
+            const language = qrCode.attributeValues.find(attr => attr.attributeName === "language")?.value || "Not Found";
+            const additionalInfo = qrCode.attributeValues.find(attr => attr.attributeName === "additional_information")?.value || "Not Found";
+            const publishedValue = qrCode.attributeValues.find(attr => attr.attributeName === "published")?.value || "Not Found";
+            let published = ""
+            if (publishedValue === "true") {
+                published = "checked";
+            }
+
+            const qrDiv = document.createElement("div");
+            qrDiv.classList.add("qr-code-container");
+            qrDiv.dataset.qrid = qrCodeId;
+
+            qrDiv.innerHTML = `
+            <div class="qr-lay-1">
+                <div class="qr-lay-1-1">
+                    <div class="qr-lay-1-1-1">
+                        <div class="qr-lay-field">
+                            <b>Campaign-Name</b><br>
+                            ${campaignName}
+                        </div>
+                        <div class="qr-lay-field">
+                            <b>Campaign-Medium</b><br>
+                            ${campaignMedium}
+                        </div>
+                    </div>
+                    <div class="qr-lay-1-1-2">
+                        <div class="qr-lay-field">
+                            <b>URL Code</b><br>
+                            ${urlCode}
+                        </div>
+                        <div class="qr-lay-field">
+                            <b>Additional Information</b><br>
+                            ${additionalInfo}
+                        </div>
+                    </div>
+                </div>
+                <div class="qr-lay-1-2">
+                    <div class="qr-lay-field">
+                        <b>Language</b><br>
+                        ${language}
+                    </div>
+                </div>
+                <div class="qr-lay-1-3">
+                    <div class="qr-lay-field">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${urlEncoded}" alt="QR Code"/>
+                    </div>
+                </div>
+            </div>
+            <div class="qr-lay-2">
+                <div class="qr-lay-2-1">
+                    <div class="qr-lay-2-1-1">
+                        <div class="qr-lay-2-1-1-1 qr-lay-field">
+                            <b>URL Encoded</b><br>
+                            <input type="text" placeholder="${urlEncoded}">
+                        </div>
+                        <div class="qr-lay-2-1-1-2">
+                            <div class="qr-lay-2-1-1-2-1">
+                                <div class="qr-lay-field">
+                                    <b>Created</b><br>
+                                    ${createDateOnly}
+                                </div>
+                            </div>
+                            <div class="qr-lay-2-1-1-2-2">
+                                <div class="qr-lay-field">
+                                    <b>Published</b>
+                                    <label class="switch">
+                                        <input type="checkbox" ${published} disabled>
+                                        <span class="slider round"></span>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+<!--                        <div class="qr-lay-2-1-1-3"></div>-->
+                    </div>
+                    <div class="qr-lay-2-1-2 qr-lay-field">
+                        <b>Tracking URL</b><br>
+                        <input type="text" placeholder="${trackingUrl}">
+                    </div>
+                </div>
+                <div class="qr-lay-2-2"></div>
+            </div>
+            `;
+
+            container.appendChild(qrDiv);
+        });
+
+        updatePaginationButtons();
+    }
+
+    function updatePaginationButtons() {
+        document.getElementById("prevBtn").disabled = currentPage === 1;
+        document.getElementById("nextBtn").disabled = currentPage * itemsPerPage >= qrCodes.length;
+        document.getElementById("pageInfo").textContent = `Page ${currentPage} of ${Math.ceil(qrCodes.length / itemsPerPage)}`;
+        if (currentPage === 1) {document.getElementById("prevBtn").classList.add('dis-button')}
+        else {document.getElementById("prevBtn").classList.remove('dis-button')}
+        if (currentPage * itemsPerPage >= qrCodes.length) {document.getElementById("nextBtn").classList.add('dis-button')}
+        else {document.getElementById("nextBtn").classList.remove('dis-button')}
+    }
+
+    function nextPage() {
+        if (currentPage * itemsPerPage < qrCodes.length) {
+            currentPage++;
+            renderQRCodes();
+        }
+    }
+
+    function prevPage() {
+        if (currentPage > 1) {
+            currentPage--;
+            renderQRCodes();
+        }
+    }
+
+    function createNewQrCode() {
+        displayCreateEditModal();
+    }
+
+    function displayCreateEditModal() {
+        const appDiv = document.getElementById('app');
+        const modalDiv = document.createElement("div");
+        modalDiv.setAttribute("id", "ce-modal-container");
+
+        modalDiv.innerHTML = `
+        <div id="ce-modal">
+            <button id="close-modal-button" onclick="closeModal()">x</button>
+            <input type="text" placeholder="Campaign Name"><br>
+            <input type="text" placeholder="Campaign Medium"><br>
+            <input type="text" placeholder="Language"><br>
+            <input type="text" placeholder="Tracking URL"><br>
+            <input type="text" placeholder="Additional Information"><br>
+            <button id="create-button">Create</button>
+        </div>
+        `;
+
+        appDiv.appendChild(modalDiv);
+        document.body.style.overflow = "hidden"; // Disable scrolling
+    }
+
+    function closeModal() {
+        const modalDiv = document.getElementById('ce-modal-container');
+        const appDiv = document.getElementById('app').removeChild(modalDiv);
+        document.body.style.overflow = "auto"; // Enable scrolling
+    }
+
 </script>
 </body>
 </html>
