--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -200,12 +200,12 @@ label {
     transform: translateX(20px);
 }
 /* CREATE & EDIT MODAL */
-#ce-modal-container {
+#ce-modal-container, #publish-modal-container, #delete-modal-container, #edit-modal-container, #download-modal-container {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.4);
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
     #ce-modal {
         width: 50%;
@@ -228,7 +228,7 @@ label {
             height: 40px;
         }
         input:first-of-type {
-            margin-top: 65px;
+            margin-top: 30px;
         }
         #create-button {
             background-color: var(--b_green);
@@ -237,5 +237,33 @@ label {
             height: 40px;
         }
     }
+}
+#publish-modal-container, #delete-modal-container {
+    #ce-modal {
+        height: 165px;
+        width: 30%;
+        border-radius: 5px;
+    }
+}
+#download-modal-container {
+    #ce-modal {
+        width: 30%;
+        height: 355px;
+        border-radius: 5px;
+    }
+}
+.icon-container {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--b_green);
+    color: white;
+    border-radius: 2px;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 35px;
+    cursor: pointer;
 }
 
